<resources>
    <string name="app_name">BODYFA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Log in</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_bodifa">Login to Bodyfa</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="not_registered_yet">Here you not registered in Bodyfa yet?</string>
    <string name="register">Register</string>
    <string name="user_account">User account</string>
    <string name="register_in_bodyfa">Register in Bodyfa</string>
    <string name="agree_licence">I have read the terms and conditions and agreed to all</string>
    <string name="foodNews">Food News</string>
    <string name="fitnessNews">Fitness News</string>
    <string name="demoText">خون را پایین آورده و کلسترول خوب خون را بالا میبرد . گردو باعث محافظت از پوست ، استحکام استخوان ، تنظیم متابولیسم بدن ، تقویت هوش و حافظه ، درمان کننده درد مفاصل ، تقویت کننده سیستم ایمنی بدن</string>
    <string name="most_point">Most Point</string>
    <string name="most_awards">Most Awards</string>
    <string name="by_city">By city</string>
    <string name="title_activity_athlete_main">AthleteMainActivity</string>
    <string name="show">Show</string>
    <string name="vip">Vip</string>
    <string name="main_page">Home</string>
    <string name="FAQ">Bodyfa FAQ</string>
    <string name="EULA">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_profile_trained">Trainer</string>
    <string name="gym">Gym</string>
    <string name="title_activity_news_detail">News Detail</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="user_comments">User comments (%1d comments)</string>
    <string name="title_activity_post_content">Send Content</string>
    <string name="send_content">Send Content</string>
    <string name="title_activity_post_tutorial">Send tutorial Video</string>
    <string name="send_tutorial_video">Send tutorial Video</string>
    <string name="audio_bitrate">Audio Bitrate (bytes/s)</string>
    <string name="audio_channel_count">Audio Channel Count</string>
    <string name="audio_codec">Audio Codec</string>
    <string name="audio_options">Audio Options</string>
    <string name="audio_sample_rate">Audio Sample Rate</string>
    <string name="audio_sample_rate_hz">Audio Sample Rate (Hz)</string>
    <string name="can_crop_video">Can crop video</string>
    <string name="can_pad_video">Can pad video</string>
    <string name="can_upscale_video">Can upscale video</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_all_video_files">Are you sure you want to delete all video files?</string>
    <string name="delete_video_file">Are you sure you want to delete the video file?</string>
    <string name="error">خطا</string>
    <string name="error_value_is_empty">Value is empty</string>
    <string name="error_value_is_negative">Value is negative</string>
    <string name="error_value_is_not_a_number">Value is not a number</string>
    <string name="error_value_is_zero">Value is zero</string>
    <string name="launch_video_recorder">Launch Video Recorder</string>
    <string name="max_file_size">Max file size (MB)</string>
    <string name="max_recording_time">Max recording (s)</string>
    <string name="min_recording_time">Min recording (s)</string>
    <string name="ok">Confirmation</string>
    <string name="output_format">Output Format</string>
    <string name="recording">Recording</string>
    <string name="recording_options">Recording Options</string>
    <string name="results">Results</string>
    <string name="success">Success</string>
    <string name="thumbnail_preview">Thumbnail Preview</string>
    <string name="video_bitrate">Video Bitrate</string>
    <string name="video_bitrate_bytes">Video Bitrate (bytes/s)</string>
    <string name="video_camera_facing">Video Camera Facing</string>
    <string name="video_codec">Video Codec</string>
    <string name="video_date">Video Date</string>
    <string name="video_file_format">Video File Format</string>
    <string name="video_file_size">Video File Size</string>
    <string name="video_frames_per_second">Video Frames Per Second</string>
    <string name="video_frame_rate">Video Frame Rate</string>
    <string name="video_height">Video Height</string>
    <string name="video_height_px">Video Height (px)</string>
    <string name="video_length">Video Length</string>
    <string name="video_options">Video Options</string>
    <string name="video_scale_direction">Video Scale Direction</string>
    <string name="video_scale_fit">Video Scale Fit</string>
    <string name="video_width">Video Width</string>
    <string name="video_width_px">Video Width (px)</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="thumbnail_file_size">Thumbnail File Size</string>
    <string name="unknown">Unknown</string>
    <string name="enter_mobile">Please enter your phone Number</string>
    <string name="sendActivationCode">Send activation code</string>
    <string name="registerInBodyfa">Register in Bodyfa</string>
    <string name="title_activity_fullscreen_video">Video display</string>
    <string name="confirmMobileNumber">Confirm your phone number</string>
    <string name="enterReceivedCode">Enter Received Code</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="trainerProfile">Trainer Profile</string>
    <string name="likedCount"> %d Like</string>
    <string name="gymProfile">Gym Profile</string>
    <string name="athlete_count">The number of athletes is :%d </string>
    <string name="getting_user_info">Getting user info...</string>
    <string name="wrong_username_password">Wrong Password !</string>
    <string name="error_connect_to_internet">An error occurred. Are you connected to the internet? ( Do you have internet connection ?) please try again </string>
    <string name="error_accord_try_again">An error occurred ! please try again</string>
    <string name="error_please_enter_again">An error occurred ! Please enter again</string>
    <string name="edit_trainer_profile">Edit Trainer Profile</string>
    <string name="choose_training_licence">Choose training licence</string>
    <string name="choose_id_card">Choose id card</string>
    <string name="uploading_picture_wait">Uploading… Please wait</string>
    <string name="choose_province">Choose province</string>
    <string name="choose_profile_photo">Choose profile photo</string>
    <string name="done_successfully">Successfully</string>
    <string name="sending">Sending...</string>
    <string name="athlete">Athlete</string>
    <string name="trainer">Trainer</string>
    <string name="gym_owner">Gym Owner</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="empty_user_name">Empty user name</string>
    <string name="submit_again">Submit again</string>
    <string name="submit_again_second">Submit again(%d)</string>
    <string name="wrong_mobile_number">Wrong mobile number</string>
    <string name="title_is_empty">Title is empty.</string>
    <string name="select_medal_pic">Select medal picture</string>
    <string name="medal_sent_successfully">medal sent successfully and after supervision confirmations it will be added to your medals</string>
    <string name="world_first_place">World first place </string>
    <string name="world_second_place">World second place</string>
    <string name="world_third_place">World third place</string>
    <string name="national_first_place">National first place</string>
    <string name="national_second_place">National second place</string>
    <string name="national_third_place">National third place</string>
    <string name="province_first_place">Province first place</string>
    <string name="province_second_place">Province second place</string>
    <string name="province_third_place">Province third place</string>
    <string name="breakfest">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="diner">Diner</string>
    <string name="snack">Snack</string>
    <string name="supplements">Supplements</string>
    <string name="meal_plan_list">Meal plan list</string>
    <string name="choose_gym_pic">Choose gym picture</string>
    <string name="workout_plan_list">Workout plan list</string>
    <string name="remove">Remove</string>
    <string name="ask_remove_plan">Remove plan ?</string>
    <string name="receiving_meal_plan_list">Receiving meal plan</string>
    <string name="receiving_workout_plan_list">Receiving workout plan list...</string>
    <string name="receiving_meal_plan">Receiving meal plan...</string>
    <string name="receiving_workout_plan">Receiving workout plan...</string>
    <string name="removing_meal_plan">Removing meal plan...</string>
    <string name="removing_workout_plan">Removing workout plan...</string>
    <string name="sending_plan">Sending plan...</string>
    <string name="plan_sent_successfully">Plan sent successfully</string>
    <string name="noting_to_show">Noting to show</string>
    <string name="plan_name_is_empty">Plan name is empty</string>
    <string name="medal_list">Medal list</string>
    <string name="ask_remove_medal">Are you sure you want to remove this medal</string>
    <string name="removed_successfuly">Removed Successfully</string>
    <string name="new2">New:</string>
    <string name="edit2">Edit:</string>
    <string name="saturday">saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="created">Created</string>
    <string name="choose_content_pic">Choose content picture</string>
    <string name="diet_news">Diet News</string>
    <string name="fitness_news">Fitness News</string>
    <string name="transactions">Transactions</string>
    <string name="exit_account">Logout</string>
    <string name="phone">phone:</string>
    <string name="gym_photo">Gym Photo:</string>
    <string name="gym_info_detail">Gym Details:</string>
    <string name="gym_name">Gym Name:</string>
    <string name="gym_name_hint">Enter Gym Name...</string>
    <string name="gym_address">Gym Address:</string>
    <string name="gym_address_hint">Enter Gym Address...</string>
    <string name="phone_1">Phone 1</string>
    <string name="phone_2">phone 2</string>
    <string name="gym_feature">Gym Features:</string>
    <string name="extra_desctiption">Extra Description:</string>
    <string name="extra_description_hint">Gym Description...</string>
    <string name="choose_address_on_map">Choose the Address on the Map</string>
    <string name="change_lang">Change Language</string>
    <string name="rial">Rial</string>
    <string name="balance_not_enough">Balance not enough</string>
    <string name="please_add_balance">Please increase your balance</string>
    <string name="your_balance_is">Your balance: %,d Rial</string>
    <string name="increading_amount">Amount to increas:</string>
    <string name="pay">Pay</string>
    <string name="your_trainer_didnt_send_any_plan">Your Trainer didn\'t send you any plan! to order a plan please go to your trainer page.</string>
    <string name="plan_list">Plan List</string>
    <string name="request_list">Request list:</string>
</resources>