<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menuGroup1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/main_page" />
        <item
            android:id="@+id/nav_user_account"
            android:icon="@drawable/ic_user"
            android:title="@string/user_account" />
        <item
            android:id="@+id/nav_user_send_content"
            android:icon="@drawable/ic_send__24dp"
            android:title="@string/send_content" />
        <item
            android:id="@+id/nav_user_send_tutorial"
            android:icon="@drawable/ic_video_call_24dp"
            android:title="@string/send_tutorial_video" />
        <item android:id="@+id/nav_exit_account"
            android:title="@string/exit_account"
            android:icon="@drawable/ic_logout"/>
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_lightbulb_24dp"
                android:title="@string/FAQ" />
            <item
                android:id="@+id/nav_eula"
                android:icon="@drawable/ic_balance"
                android:title="@string/EULA" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_agenda"
                android:title="@string/contact_us" />
        </menu>
    </item>

</menu>
