<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="gym"
            type="com.example.arsalan.mygym.models.Gym" />
    </data>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:padding="16dp"
    tools:context=".fragments.GymEditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gym_photo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/imgGym"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="3:2" />

            <Button
                android:id="@+id/btnEditImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/black_overlay"
                android:drawableStart="@drawable/ic_edit_24dp"
                android:text="@string/edit"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gym_info_detail" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gym_name" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rect_stroke"
            android:ems="10"
            android:text="@{gym.title}"
            android:hint="@string/gym_name_hint"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gym_address" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spnProvince"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:prompt="@string/send"

                />

            <Spinner
                android:id="@+id/spnCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/send" />
        </LinearLayout>

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rect_stroke"
            android:ems="10"
            android:gravity="top|right"
            android:hint="@string/gym_address_hint"
            android:text="@{gym.address}"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/etPhone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rect_stroke"
            android:ems="10"
            android:hint="@string/phone_1"
            android:text="@{gym.phone1}"
            android:inputType="phone"
            android:maxLength="7" />
        <EditText
            android:id="@+id/etPhone2"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rect_stroke"
            android:ems="10"
            android:hint="@string/phone_2"
            android:text="@{gym.phone2}"
            android:inputType="phone"
            android:maxLength="7" />
        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans_mobile"
            android:text="قیمت عضویت ۱ روزه:"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/etRegisterDailyFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/gray_light"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/ic_rial"
            android:fontFamily="@font/iran_sans_mobile"
            android:gravity="left"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="14sp"
            android:text="@{String.valueOf(gym.oneDayFee)}" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans_mobile"
            android:text="قیمت عضویت ۷ روزه:"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/etRegisterWeeklyFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/gray_light"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/ic_rial"
            android:fontFamily="@font/iran_sans_mobile"
            android:gravity="left"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="14sp"
            android:text="@{String.valueOf(gym.weeklyFee)}" />
        <TextView
            android:id="@+id/txtCurrentBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans_mobile"
            android:text="قیمت عضویت 12 روزه:"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/etRegisterTwelveFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/gray_light"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/ic_rial"
            android:fontFamily="@font/iran_sans_mobile"
            android:gravity="left"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="14sp"
            android:text="@{String.valueOf(gym.weeklyFee)}" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans_mobile"
            android:text="قیمت عضویت نیم ماه:"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/etRegister1HalfMonthFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/gray_light"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/ic_rial"
            android:fontFamily="@font/iran_sans_mobile"
            android:gravity="left"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="14sp"
            android:text="@{String.valueOf(gym.halfMonthFee)}" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans_mobile"
            android:text="قیمت عضویت ماهیانه:"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/etRegisterMonthlyFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/gray_light"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/ic_rial"
            android:fontFamily="@font/iran_sans_mobile"
            android:gravity="left"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="14sp"
            android:text="@{String.valueOf(gym.monthlyFee)}" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gym_feature" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extra_desctiption" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rect_stroke"
            android:ems="10"
            android:gravity="top|right"
            android:hint="@string/extra_description_hint"
            android:text="@{gym.description}"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <Button
            android:id="@+id/btnAddLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/blue_rect_back"
            android:drawableTop="@drawable/ic_add_location_black_24dp"
            android:gravity="center"
            android:text="@string/choose_address_on_map" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_rect_back"
            android:text="@string/send"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>
</layout>