<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AthleteWorkoutPlanListFragment"
    android:orientation="vertical"
    android:layoutDirection="rtl">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingStart="8dp"
        android:text="@string/plan_list"
        android:background="?attr/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:elevation="2dp"/>

    <ListView
        android:id="@+id/lst_plan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_athlete_meal_plan"
        />
    <TextView
        android:id="@+id/txtTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingStart="8dp"
        android:text="@string/request_list"
        android:background="?attr/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:elevation="2dp"/>
    <ListView
        android:id="@+id/lst_request"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        tools:listitem="@layout/item_athlete_workout_plan_request"/>

</LinearLayout>
    <RelativeLayout
        android:id="@+id/layNothingToShow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noting_to_show"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:textColor="?attr/colorPrimaryDark"/>

        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_below="@+id/txt1"
            android:textColor="@color/gray_dark"
            android:gravity="center_horizontal"
            android:text="@string/your_trainer_didnt_send_any_plan" />

    </RelativeLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:useCompatPadding="true"
        android:clickable="true"
        android:src="@drawable/ic_add_24dp"
        app:backgroundTint="@color/yellow"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        />
</RelativeLayout>